Add resolved proxy for the http stream job to net log

This makes it easier to understand the net log when two racing jobs are
created with different proxies (say https://, and quic://).

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

BUG=671291

Review-Url: https://codereview.chromium.org/2650773004
Cr-Commit-Position: refs/heads/master@{#445574}

Former-commit-id: f811aeb9e9174c1b3c097a20fbd201c99694547e